--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asyncio==3.4.3
+asyncio
 motor==3.3.2
 pyrogram-dev==2.1.0
 python-dotenv==1.0.1
@@ -8,3 +8,4 @@ youtube-search-python
 yt-dlp==2023.12.30
 Pillow
 pymediainfo
+pyrogram
